[package]
name = "new_music_player"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
kira = "0.8.5"
openmpt = "0.3.1"
rand = "0.8.5"
raw-window-handle = "0.6.0"
souvlaki = "0.6.1"

[not-deps]
kittyaudio = "0.1.6"
soloud = "1.0.5"
